src/css/queries.css
/* --------------------------------------------------------------------
    OPEN WEB ADVOCACY
    Media queries
    2022/2025
-------------------------------------------------------------------- */

@media screen and (min-width: 440px) {
  /* div.site-header__inner {
    display: flex;
    justify-content: space-between;
    align-items: center;
  } */

  header:not(.home-header) nav {
    text-align: right;
    /* padding: 0 0 1rem; */
  }

  /* header:not(.home-header) nav ul {
    display: block;
  } */

  dl.glossary dd {
    position: relative;
    padding: 0.5rem 0 1rem 4rem;
    border: none;
  }

  dl.glossary dd::before {
    content: "";
    display: inline-block;
    position: absolute;
    top: 0.25rem;
    left: 0.25rem;
    width: 2.5rem;
    height: 1rem;
    border-bottom: 2px solid var(--main-color);
    border-left: 1px solid var(--main-color);
  }

  div.prom-banner {
    display: grid;
    grid-template-columns: 90px auto;
    grid-template-rows: auto auto;
    gap: 0 1.5rem;
  }

  div.prom-banner p:nth-child(2) {
    max-width: 30em;
  }

  div.prom-banner p:last-child {
    grid-column-start: 2;
    grid-column-end: -1;
  }

  ul.contributors li {
    min-width: 300px;
  }

}

@media screen and (min-width: 500px) {
  header nav li {
    font-size: 1.2em;
  }

  header:not(.home-header) nav a {
    color: var(--text-inv);
    background-color: var(--main-color);
  }

  header:not(.home-header) nav a:hover {
    color: var(--main-light);
  }

  header.home-header nav {
    text-align: right;
  }

  div.site-header__inner a.site-header__brand {
    display: grid;
    grid-template-columns: 80px auto;
    align-items: end;
    gap: 3vw;
  }

  div.site-header__inner a span {
    display: block;
  }

  body > footer {
    margin-top: 4rem;
    margin-bottom: 1rem;
  }

  div.gallery {
    gap: 3rem;
    margin-bottom: 3rem;
  }

  blockquote {
    padding-right: 0;
    padding-left: 3.5rem;
  }
  blockquote::before {
    font-size: 7rem;
  }
}

@media screen and (min-width: 700px) {
  p.logo-home {
    max-width: 100%;
  }

  figure {
    padding: 2rem;
  }

  dl {
    display: grid;
    grid-template-columns: minmax(auto, 20ch) 1fr;
    grid-gap: 0.5rem 1rem;
  }
  dt {margin-top: 0;}
}

@media screen and (min-width: 1000px) {
  header.home-header {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
  }

  header.home-header nav ul {
    display: block;
  }

  header.home-header nav {
    width: auto;
    background-color: var(--body-bg);
    padding: 0;
  }

  header nav ul {justify-content: space-between;}

  header.home-header li {
    font-variation-settings: var(--fvs-regular);
  }

  header.home-header nav a {
    color: var(--main-color);
    background-color: var(--body-bg);
  }

  header.home-header nav a:hover {
    color: var(--text-inv);
    background-color: var(--n-dark);
  }

  div.identity {
    flex: 1;
  }

  p.home-intro {
    margin-left: calc(175px + 10vw);
  }

  div.inner-wrapper {
    display: flex;
    justify-content: space-between;
    gap: 4vw;
  }
  aside {
    box-sizing: border-box;
    max-width: 328px;
  }
}

@media screen and (min-width: 1000px) {
  div.highlight {
    position: relative;
    padding: 1.8rem 2rem 2rem;
  }

  div.highlight h2 {
    position: absolute;
    width: 10vw;
    top: 1.2rem;
    left: 2rem;
  }

  div.highlight div.group {
    margin-top: 0;
    margin-left: calc(175px + 9.5vw - 1.5rem);
  }
}

@media screen and (min-width: 950px) and (max-width: 1299px) {
  div.who-entry {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: auto auto;
    gap: 3rem;
  }

  div.who-entry div.prom-banner {
    display: block;
  }
}

@media screen and (min-width: 1100px) and (max-width: 1299px) {
  div.policy-entry {
    position: relative;
  }

  div.policy-entry p.entry-link {
    position: absolute;
    top: 50%;
    right: 1.5rem;
    margin: 0;
  }

  dl.counter {
    display: grid;
    grid-template-columns: 1fr 2fr;
    max-width: 100%;
  }

  div.home-wrapper dl.counter *+* {
    margin-top: 1rem;
  }

  dl.counter dt,
  dl.counter dd {
    margin-top: 1rem;
  }
}


@media screen and (min-width: 1300px) {
  div.home-wrapper {
    display: flex;
  }

  p.home-intro {
    margin-top: 0;
  }

  #main-home {
    flex: 1;
  }

  #main-home p,
  #main-home dd,
  #main-home li {
    font-size: 1.2em;
  }

  #main-home p.home-intro {
    font-size: 1.4em;
    padding-right: 2rem;
  }

  header:not(.home-header) nav ul {
    justify-content: space-between;
  }

  dl.counter dt {
    font-size: 1.5em;
    padding-top: 0.5em;
  }

  aside {
    flex: 0 0 20%;
    margin: 0;
  }

  div.home-wrapper aside {
    margin: 0;
  }

  div.promo {
    flex-direction: row-reverse;
  }

  div.promo p.illustration {
    width: 120px;
    top: 1rem;
    left: auto;
    right: -25px;
  }

  div.promo p.illustration img {
    transform: rotate(10deg);
  }

  div.get-involved {
    display: flex;
    gap: 2rem;
  }

  div.get-involved>div {
    padding: 1.5rem 2rem 2rem;
  }

  div.contact-entry {
    flex-basis: 45%;
    margin-top: 0;
  }

  div.presentation {
    display: flex;
    gap: 2rem;
    margin-top: 0;
  }

  div.priorities-entry {
    flex-basis: 60%;
    padding: 3rem 4rem;
    margin-top: 0;
    margin-right: 2rem;
  }

  div.policy-entry {
    flex: 1 1 32%;
    padding: 3rem 2rem 2rem;
  }

  div.grid3-1 {
    position: relative;
    display: flex;
    flex-direction: row-reverse;
  }

  div.toc {
    width: 300px;
  }

  div.grid3-1 div.content {
    flex: 1;
    margin-right: 5%;
  }

  div.grid3-1 details {
    position: sticky;
    top: 3rem;
    padding-right: 1rem;
  }

  div.grid3-1 details ul {
    margin-left: 1rem;
  }

  div.grid3-1 details .flow {
    overflow: auto;
    height: 40vw;
    padding-right: 1rem;
  }

  summary h2 {
    font-size: 1.2em;
  }

}

